--- a/index.html
+++ b/index.html
@@ -1,19 +1,51 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Practice Website</title>
-    <meta charset="UTF-8">
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  </head>
-  <body>
-    <p id="result"></p>
-    <script>
-      function sayHello() {
-        fetch('/hello')
-          .then(response => response.text())
-          .then(data => {document.getElementById('result').innerHTML = data;
-           });
-     }
-    </script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>Current Time and Temperature</title>
+  <script>
+    // Function to get current time
+    function getTime() {
+      const now = new Date();
+      const timeString = now.toLocaleTimeString();
+      return timeString;
+    }
+
+    // Function to get current temperature for Bangkok
+    async function getBangkokTemp() {
+      const response = await fetch("https://api.openweathermap.org/data/2.5/weather?q=Bangkok,th&appid=b29b5c17022a575dd5fac619d51a160f&units=metric");
+      const data = await response.json();
+      const temp = data.main.temp;
+      return temp;
+    }
+
+    // Function to get current temperature for Holland
+    async function getHollandTemp() {
+      const response = await fetch("https://api.openweathermap.org/data/2.5/weather?q=Holland,michigan&appid=b29b5c17022a575dd5fac619d51a160f&units=metric");
+      const data = await response.json();
+      const temp = data.main.temp;
+      return temp;
+    }
+
+    // Function to display time and temperature
+    async function displayTimeAndTemp() {
+      const bangkokTemp = await getBangkokTemp();
+      const hollandTemp = await getHollandTemp();
+      const bangkokTime = getTime();
+      const hollandTime = getTime();
+
+      document.getElementById("bangkok-time").textContent = "Bangkok Time: " + bangkokTime;
+      document.getElementById("holland-time").textContent = "Holland Time: " + hollandTime;
+      document.getElementById("bangkok-temp").textContent = "Bangkok Temperature: " + bangkokTemp + "°C";
+      document.getElementById("holland-temp").textContent = "Holland Temperature: " + hollandTemp + "°C";
+    }
+  </script>
+</head>
+<body onload="displayTimeAndTemp()">
+  <h1>Current Time and Temperature</h1>
+  <p id="bangkok-time"></p>
+  <p id="bangkok-temp"></p>
+  <p id="holland-time"></p>
+  <p id="holland-temp"></p>
+</body>
 </html>
