--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script>
     // Function to get current time
     function getTime(timeZone) {
-      onst options = { 
+      const options = { 
         timeZone: timeZone, 
           hour12: false, 
           hour: 'numeric', 
