--- a/index_backup.html
+++ b/index_backup.html
@@ -8,7 +8,7 @@
     function getTime(timeZone) {
       const options = { 
         timeZone: timeZone, 
-          hour12: false, 
+          hour12: true, 
           hour: 'numeric', 
           minute: 'numeric', 
           second: 'numeric' 
