--- a/Astronomy/drawOrbits.html
+++ b/Astronomy/drawOrbits.html
@@ -7,6 +7,7 @@
         height: 100%;
         margin: 0;
         padding: 0;
+        background-color: black;
       }
       #solarCanvas {
         border: 1px solid black;
