--- a/BC/present.html
+++ b/BC/present.html
@@ -18,7 +18,7 @@
     <body>
         <p>Some screens move around,</p>
         <p>Going miles forth and to,</p>
-        <p>Looke near one and you've found,</p>
+        <p>Look near one and you've found,</p>
         <p>A present all for you.</p>
     </body>
 </html>
