Change address to chart.js

--- a/Statistics/BirthMonth.html
+++ b/Statistics/BirthMonth.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Experiment Trials</title>
-    <script src="node_modules/chart.js/dist/chart.umd.js"></script>
+    <script src="Statistics/node_modules/chart.js/dist/chart.umd.js"></script>
     <style type="text/css">
         body {
           background-color: #D1E7D1;
