Updated BirthMonth to refer to original chart library

--- a/Statistics/BirthMonth.html
+++ b/Statistics/BirthMonth.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Experiment Trials</title>
-    <script src="Statistics/node_modules/chart.js/dist/chart.umd.js"></script>
+    <!-- <script src="node_modules/chart.js/dist/chart.umd.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style type="text/css">
         body {
           background-color: #D1E7D1;
