--- a/Statistics/PracticeHypothesisTesting.html
+++ b/Statistics/PracticeHypothesisTesting.html
@@ -158,6 +158,7 @@
         var sampleSD = parseFloat(document.getElementById("sampleSD").innerHTML);
         var n = parseInt(document.getElementById("numSamples").innerHTML);
         var sampleMean = parseFloat(document.getElementById("sampleMean").innerHTML);
+        var alpha = parseFloat(document.getElementById("alpha").innerHTML);
         document.getElementById("tt_null").innerHTML = "µ = " + popMean;
         document.getElementById("tt_alt").innerHTML = "µ < or > " + popMean;
 
@@ -171,10 +172,10 @@
         } else {
             var criticalValue = 2.58;
         }
-        document.getElementById("tt_criticalValue").innerHTML = criticalValue;
+        document.getElementById("tt_criticalValue").innerHTML = `+/-${criticalValue}`;
 
 
-        if (testStatistic < -criticalValue || testStatistic > critialValue) {
+        if (testStatistic < -criticalValue || testStatistic > criticalValue) {
             document.getElementById("tt_result").innerHTML = "Rejected";
         } else {
             document.getElementById("tt_result").innerHTML = "Accepted";
